@@ -1,0 +1,2 @@
+prog: ioctl-tiocsbrk
+vgopts: -q
